tests/auto/quick/qquickshadereffect/tst_qquickshadereffect.cpp
@@ -85,6 +85,8 @@ private slots:
 
     void withoutQmlEngine();
 
+    void hideParent();
+
 private:
     enum PresenceFlags {
         VertexPresent = 0x01,
@@ -334,6 +336,18 @@ void tst_qquickshadereffect::withoutQmlEngine()
     shaderEffect->setVertexShader("");
     QVERIFY(shaderEffect->isComponentComplete());
     delete window;
+}
+
+// QTBUG-86402: hiding the parent of an item that uses an effect should not cause a crash.
+void tst_qquickshadereffect::hideParent()
+{
+    QScopedPointer<QQuickView> view(new QQuickView);
+    view->setSource(testFileUrl("hideParent.qml"));
+    QCOMPARE(view->status(), QQuickView::Ready);
+    view->show();
+    QVERIFY(QTest::qWaitForWindowExposed(view.data()));
+    // Should finish without crashing.
+    QTRY_VERIFY(view->rootObject()->property("finished").toBool());
 }
 
 QTEST_MAIN(tst_qquickshadereffect)
